@@ -3423,20 +3423,18 @@ endif
 # configure script arguments, quoted in single quotes
 CONFIGURE_ARGS = @CONFIGURE_ARGS@
 ADD_ZERO_CONFIGURE_ARGS = \
-	--with-openjdk \
-	--with-openjdk-home=$(abs_top_builddir)/$(BUILD_OUTPUT_DIR)/j2sdk-image \
-	--enable-zero
+	--with-jdk-home=$(abs_top_builddir)/$(BUILD_OUTPUT_DIR)/j2sdk-image \
+	--disable-bootstrap --enable-zero
 if ADD_SHARK_BUILD
 ADD_ZERO_CONFIGURE_ARGS += \
 	--enable-shark
 endif
 ADD_ZERO_CONFIGURE_ARGS += \
 	--disable-docs \
-	$(filter-out '--with-gcj-home=% '--with-ecj=% \
+	$(filter-out '--with-jdk-home=% '--with-ecj=% \
 			'--with-java=% '--with-javah=% \
 			'--with-rmic=% '--with-additional-vms=% \
-			'--with-icedtea '--with-icedtea-home=% \
-			'--with-openjdk '--with-openjdk-home=% , \
+			'--disable-bootstrap% '--enable-bootstrap% , \
 		$(CONFIGURE_ARGS))
 
 ADD_ZERO_EXTRA_BUILD_ENV = \
